--- a/ASS2/Part1_Part2.ipynb
+++ b/ASS2/Part1_Part2.ipynb
@@ -1233,7 +1233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Way more time to compute, way more ram needed, worse resaults"
+    "Way more time to compute, way more ram needed, worse results judging by the amount of Harry Potter recommendations between the 2."
    ]
   },
   {
