--- a/ASS2/Part3.ipynb
+++ b/ASS2/Part3.ipynb
@@ -9620,7 +9620,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using the best Hyper Parameters for final resaults"
+    "### Using the best Hyper Parameters for final results"
    ]
   },
   {
@@ -9722,7 +9722,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resaults table"
+    "# Results table"
    ]
   },
   {
